fix: Align thumbnail details to start

--- a/common/common.scss
+++ b/common/common.scss
@@ -392,7 +392,7 @@
       "thumbnail details";
     column-gap: 0.75em;
     row-gap: 0.25em;
-    align-items: center;
+    align-items: start;
   }
 
   .link-top-line {
